@@ -1,6 +1,12 @@
+2013-02-27	The InnoDB Team
+
+	* page/page0zip.c:
+	Fix Bug#16400920 INNODB TRIES TO PASS EMPTY BUFFER TO ZLIB,
+	GETS Z_BUF_ERROR
+
 2013-01-21	The InnoDB Team
 
-	* buf/buf0buf.cc, handler/ha_innodb.cc:
+	* buf/buf0buf.c, handler/ha_innodb.cc:
 	Fix Bug#16067973 DROP TABLE IS SLOW WHEN IT DECOMPRESSES
 	COMPRESSED-ONLY PAGES
 
